# fullstack

./: README.md  docker-compose.yaml  start_db.sh
backend/: Cargo.toml  Dockerfile
backend/migrations/2022-01-15-011251_create_products/: up.sql
backend/src/: db.rs  main.rs  schema.rs
frontend/: Dockerfile  package-lock.json  package.json  svelte.config.js
frontend/src/: App.svelte  Blog.svelte  Footer.svelte  Header.svelte  app.html  blog.js  body.css
frontend/src/lib/: footer.svelte  header.svelte
frontend/src/lib/layout/: blog.svelte
frontend/src/routes/: _header.svelte  blog.svelte  cart.svelte  index.svelte  learning.svelte  materials.svelte  tools.svelte
frontend/src/routes/api/: hey.js
frontend/src/routes/blog/: 1.md  2.md  beyond_diy.md  index.svelte  posts.json.js
frontend/static/: global.css
