[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.5.4"
actix-web = "3"
diesel = { version = "1.4.8", features = ["postgres"]}
postgres = "0.19.2"
serde = "1.0.133"
